--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "card",
   "version": "0.1.0",
+  "homepage": "https://nikolay20112001.github.io/curtainsProject/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,6 +13,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
