--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "card",
   "version": "0.1.0",
-  "homepage": "https://nikolay20112001.github.io/curtainsProject/",
+  "homepage": "https://nikolay20112001.github.io/curtainsProject2/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -9,7 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
